@@ -1,11 +1,12 @@
 ======================
     ADDED: beta-state incremental refresh. test it with fam enabled!
-	 ADDED: synchronizer: ability to give more files in the file filter (ex. '*.cpp *.h')
+    ADDED: synchronizer: ability to give more files in the file filter (ex. '*.cpp *.h')
     ADDED: Two single click rename (Total Commander rename)
     ADDED: The 3rd hand of krusader. click the litle arrow below the panel's scrollbar to see..
     ADDED: showing suid, sgid and sticky bits in the permissions column
     REACTIVATED: usermenu (now using the new useraction-system)
     ADDED: New useraction-system (partly based on Shies usermenu-prototype)
+    FIXED: [ 988835 ] window size of synchronize dirs is not stored
     FIXED: [ 946567 ] krusader minimizes to tray on desktop change
     FIXED: mountman changes... read the email ;-)    
 
